<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="new_chat"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/new_chat"
        android:shortcutLongLabel="@string/new_chat"
        android:shortcutDisabledMessage="@string/new_chat">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.divjun.ai.MainActivity"
            android:targetPackage="com.divjun.ai" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="voice_chat"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_voice_chat"
        android:shortcutLongLabel="@string/shortcut_voice_chat_long"
        android:shortcutDisabledMessage="@string/shortcut_voice_chat_disabled">
        <intent
            android:action="com.divjun.ai.VOICE_CHAT"
            android:targetClass="com.divjun.ai.MainActivity"
            android:targetPackage="com.divjun.ai" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="camera_scan"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_camera_scan"
        android:shortcutLongLabel="@string/shortcut_camera_scan_long"
        android:shortcutDisabledMessage="@string/shortcut_camera_scan_disabled">
        <intent
            android:action="com.divjun.ai.CAMERA_SCAN"
            android:targetClass="com.divjun.ai.MainActivity"
            android:targetPackage="com.divjun.ai" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>